[package]
name = "bevy_win32"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"
bevy_ecs = "0.11"
bevy_utils = "0.11"
bevy_app = "0.11"
bevy_reflect = "0.11"
bevy_math = "0.11"
bevy_input = "0.11"
bevy_window = "0.11"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
]
