[package]
name = "epaint_dx11"
version = "0.1.0"
edition = "2021"

[features]
puffin = ["dep:puffin"]

[dependencies]
thiserror = "1.0"
epaint = "0.23"
puffin = { version = "0.17", optional = true }

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
]
