[package]
name = "cs2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # turn on Link-Time Optimizations
codegen-units = 1 # trade compile time with maximum optimization
opt-level = 3     # optimize for size
strip = "symbols"

[dependencies]
binsig = "0.1"
thiserror = "1.0"
log = "0.4"
simple_logger = { version = "4.2", features = [
    "colors",
    "threads",
    "timestamps",
    "stderr",
] }

# render & ui
epaint = { version = "0.23", features = ["log", "default_fonts"] }
egui = { version = "0.23", features = ["log", "puffin"] }
egui_dock = "0.8"

# ecs
bevy_ecs = "0.11"
bevy_utils = "0.11"
bevy_app = "0.11"
bevy_reflect = "0.11"
bevy_math = "0.11"
bevy_input = "0.11"
bevy_window = "0.11"

# workspace
bevy_schedule_hook = { path = "../bevy_schedule_hook" }
bevy_win32 = { path = "../bevy_win32" }
epaint_dx11 = { path = "../epaint_dx11" }

# profiling
puffin = "0.17"
puffin_egui = "0.23"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
]
